Fix overflow issue in Annotate view.

--- a/web/default/style.css
+++ b/web/default/style.css
@@ -484,6 +484,8 @@ div[id^='src'] .l, div[id^='src'] .hl, .blame .r, .blame .a,
 	background-color: #dddddd;
 	color: #666;
 	margin-right: .5ex;
+	text-overflow:ellipsis;
+	overflow:hidden;
 }
 
 .blame .search {
